tests/positive/QualifiedConstructor/M.juvix
module M;

module O;
  axiom A : Type;
end;

open O;

module N;
  module O;
    type T := A : T;

    open T using {A} public;
  end;
end;

open N.O;

fun : T → T
  | T.A := T.A;
