tests/negative/AmbiguousExport.juvix
module AmbiguousExport;

  module N;
    module O;
      type T :=
        A : T;
    end;
  end;

  open N public;

  module O;
    axiom A : Type;
  end;
end;
